Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, integer> yoda
        integer y = yoda:useForce(66, 66)
        output "passed"
     end
end
