Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBooleanRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, boolean> yoda
        integer y = yoda(66, 66, 66)
     end
end
